applications/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>kcs_dev__AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>kcs_dev__BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>kcs_dev__NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <validationRules>
        <fullName>LLC_BI__Prevent_Reassigning_Individual_Contacts</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(AccountId) &amp;&amp; PRIORVALUE(LLC_BI__Is_Associated_To_Individual_Account__c) == true</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Contacts assigned to an Individual Account cannot be reassigned to a different Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Require_Country_of_Citizenship</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( LLC_BI__US_Citizen__c, &apos;no&apos;),
ISBLANK( TEXT( LLC_BI__Country_of_Citizenship__c ) ) )</errorConditionFormula>
        <errorMessage>If contact is not a US citizen a country of citizenship must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Social_Security_Max_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( LLC_BI__SS__c ) &gt; 12</errorConditionFormula>
        <errorMessage>Social Security Number cannot exceed 12 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Social_Security_Max_Length_9</fullName>
        <active>true</active>
        <description>Enforces a character limit of 9 on the LLC_BI__SS__c field. Added for the Commercial Accelerate project.</description>
        <errorConditionFormula>AND(
$User.No_Workflow__c = false,

NOT(ISBLANK(LLC_BI__SS__c)),
OR(
LEN(LLC_BI__SS__c)!=9
,
NOT(REGEX(LLC_BI__SS__c , &quot;([0-9]{9})|([0-9]{3}-[0-9]{2}-[0-9]{4})|([0-9]{2}-[0-9]{7})&quot;))))</errorConditionFormula>
        <errorMessage>Social Security Number cannot exceed 9 digits.</errorMessage>
    </validationRules>
</CustomObject>